[package]
name = "icedtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10", features = ["tokio", "debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.15"
winit = "0.28.6"
directories-next = "2.0"


chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.29.1", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "fs",
] }
